unpackaged/main/default/objects/csplit__CaseSplitIncludedChildren__c/csplit__CaseSplitIncludedChildren__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>CaseSplitIncludedChildren</label>
</CustomObject>