unpackaged/main/default/objects/csplit__CaseSplitIncludedChildren__c/fields/csplit__Bypass_Security__c.field-meta.xml
<CustomField>
    <fullName>csplit__Bypass_Security__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass security and sharing for case comment updates.</description>
    <label>Bypass Security</label>
    <type>Checkbox</type>
</CustomField>