unpackaged/main/default/objects/csplit__CaseSplitIncludedChildren__c/fields/csplit__Comments_Public__c.field-meta.xml
<CustomField>
    <fullName>csplit__Comments_Public__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Informational case comments inserted as public comments.</description>
    <label>Comments Public</label>
    <type>Checkbox</type>
</CustomField>