unpackaged/main/default/objects/csplit__CaseSplitIncludedChildren__c/fields/csplit__Delete_Original__c.field-meta.xml
<CustomField>
    <fullName>csplit__Delete_Original__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Delete the original record when cloning a record of this object.</description>
    <inlineHelpText>Checking this will cause the original record to be deleted when copying it over to the new case.</inlineHelpText>
    <label>Delete Original</label>
    <type>Checkbox</type>
</CustomField>