unpackaged/main/default/objects/csplit__CaseSplitIncludedChildren__c/fields/csplit__DisplayField2__c.field-meta.xml
<CustomField>
    <fullName>csplit__DisplayField2__c</fullName>
    <description>The second field which will be displayed in the related list on the split page for this object.</description>
    <label>DisplayField2</label>
    <length>64</length>
    <type>Text</type>
</CustomField>