unpackaged/main/default/objects/csplit__CaseSplitIncludedChildren__c/fields/csplit__DisplayField__c.field-meta.xml
<CustomField>
    <fullName>csplit__DisplayField__c</fullName>
    <description>The first field which will be displayed in the related list on the split page for this object.</description>
    <label>DisplayField</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>