unpackaged/main/default/objects/csplit__CaseSplitIncludedChildren__c/fields/csplit__Relationship__c.field-meta.xml
<CustomField>
    <fullName>csplit__Relationship__c</fullName>
    <description>The name of the lookup field to case on the related object.</description>
    <label>Relationship</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>